# mathematical-modeling

./: LICENSE  README.md  pyproject.toml
docs/: 项目安排表.md
mathematical_modeling/: main.ipynb
